TC-008/008-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-ns
  labels:
    env: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod-ns
  labels:
    env: prod
