TC-008/008-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-no-team
spec:
  containers:
    - name: nginx
      image: nginx
